Text URLs are now replaced via HTML parsing.
TODO: asynchronous call to the storage.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@ app.db
 # Python related files
 **/*.pyc
 **/__pycache__/*
+
+# Database files
+demo-service/api/MainData
+demo-storage/files_db
+demo-storage/MainStorage
