Interception/restitution are now working for texts (on LinkedIn).

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,12 +3,13 @@
   "description" : "Description",
   "version": "0.2",
 
-  "permissions": [
-    "activeTab",
-    "tabs",
-    "http://*/*",
-    "https://*/*"
-  ],
+    "permissions": [
+        "contextMenus",
+        "activeTab",
+        "tabs",
+        "http://*/*",
+        "https://*/*"
+    ],
   "content_scripts": [
     {
       "all_frames" : true,
