--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -34,7 +34,8 @@
   ],
 
   "web_accessible_resources": [ 
-    "jquery-3.5.1.min.js"
+    "jquery-3.5.1.min.js",
+    "IMTA_vert.png"
   ],
   
   "background": {
