update env varabile

--- a/demo-storage/.env.sample
+++ b/demo-storage/.env.sample
@@ -1,7 +1,8 @@
 # Common config
 API_UPLOAD_FOLDER="upload_files"
 # The base url to use when building the full url to the files. MUST start with http or https
-BASE_URL=http://localhost:8000
+BASE_HOST=http://localhost:5001
+DEFAULT_ACESS_URL="all"
 
 # Docker config
 API_ROOT_FOLDER="/usr/src/app"
