--- a/extension/package.json
+++ b/extension/package.json
@@ -19,14 +19,18 @@
   },
   "dependencies": {
     "@nuintun/qrcode": "^3.0.1",
+    "@ulivz/get-event-listeners": "^0.0.1",
     "atob": "^2.1.2",
     "b64-to-blob": "^1.2.19",
+    "babel-loader": "^8.2.3",
     "bootstrap": "^5.1.3",
+    "chrome-remote-interface": "^0.31.1",
     "datauri-to-uint8-array": "^1.0.0",
     "file-saver": "^1.3.2",
     "geteventlisteners": "^1.1.0",
     "jquery": "^3.6.0",
     "jquery-first-event": "^1.0.2",
-    "node-request-interceptor": "^0.6.3"
+    "node-request-interceptor": "^0.6.3",
+    "ts-loader": "^9.2.6"
   }
 }
