--- a/extension/public/manifest.json
+++ b/extension/public/manifest.json
@@ -16,8 +16,7 @@
     "persistent": true
   },
   "browser_action": {
-    "default_title": "My Extension",
-    "default_popup": "popup.html"
+    "default_title": "My Extension"
   },
   "permissions": [
     "webRequest",
