update readme for storage

--- a/demo-storage/.env.sample
+++ b/demo-storage/.env.sample
@@ -1,16 +1,16 @@
 # Common config
+
+# The path to the temporarily saved files.
 API_UPLOAD_FOLDER="upload_files"
+
 # The base url to use when building the full url to the files. MUST start with http or https
 BASE_HOST=http://localhost:5001
+# The port of the server, it must be the same as the port in BASE_HOST
+PORT=5001
+
+# The default access web site for the resources.
 DEFAULT_ACESS_URL="all"
 
-# Docker config
-API_ROOT_FOLDER="/usr/src/app"
-
-# API config
-# This can't be localhost and needs to be either the IP of the
-# container or the name of the service, 'mongo-db' in this case
-# https://serverfault.com/a/763591
-MONGO_URL = "mongodb://root:example@mongo-db:27017"
-MONGO_DB_NAME = "files_db"
-MONGO_FILES_COLLECTION_NAME = "files"
+# A remote database'url for connection.
+# It is not necessary if you directly use local database.
+DB_LINK = ""
